--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shopping list",
+  "name": "shopping-list",
   "version": "1.1.0",
   "description": "add, remove items to list",
   "main": "list.js",
