--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "shopping-list",
   "version": "1.1.0",
-  "description": "add, remove items to list",
-  "main": "list.js",
+  "description": "alexa utility for quickly building skills",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
